#1912 - prevent extra padding around `<mark>` tags

--- a/dashboard/src/assets/custom.scss
+++ b/dashboard/src/assets/custom.scss
@@ -42,7 +42,7 @@ $grid-breakpoints: (
     xxxl: 1600px
 );
 
-$mark-padding: 0px !default;
+$mark-padding: 0px;
 
 // Bootstrap and its default variables
 @import '../../node_modules/bootstrap/scss/bootstrap';
